<resources>
    <string name="app_name">EasyRecharge</string>
    <string name="your_pin_goes_here">YOUR PIN GOES HERE</string>
    <string name="btn_recharge">Recharge</string>
    <string name="about_developer">About Developer</string>
    <string name="primary_text_landing">Recharging your balance has never been so easy!</string>
    <string name="secondary_text_landing">Top up your balance with just few clicks</string>
    <string name="instruction">Click on the RECHARGE button to get started.</string>
    <string name="retake">Retake</string>
    <string name="instruction_second">Confirm if the PIN code is correct.\n \nIf incorrect, you can edit the PIN Code manually or retake scan of the card.</string>
</resources>