<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">

    <include
        android:id="@+id/toolbar_landing"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/ivSIMs"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@+id/toolbar_landing"
        android:scaleType="centerCrop"
        android:src="@drawable/img_ncell_x_ntc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivSIMs"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/primary_text_landing"
            android:textColor="@color/colorPrimaryText"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/secondary_text_landing"
            android:textColor="@color/colorSecondaryText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/inst_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:drawableEnd="@drawable/ic_flash"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/instruction"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRecharge"
        style="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="35dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_flash"
        app:rippleColor="@color/colorPrimaryDark" />

</RelativeLayout>