<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnRetake"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:drawableEnd="@drawable/ic_redo"
        android:drawablePadding="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/retake" />

    <ImageView
        android:id="@+id/imgViewCaptured"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btnRetake"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_barcode" />

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imgViewCaptured">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/textinputlayout_border"
                android:padding="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#D2E9F4"
                    android:hint="@string/your_pin_goes_here"
                    android:inputType="number"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRecharge"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilPin"
                android:layout_marginTop="30dp"
                android:text="@string/btn_recharge" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>